# FastAPISession

./: docker-compose.yml  pyproject.toml
app/: create_app.py  main.py
app/app_types/: __init__.py  base.py
app/constants/: __init__.py  address.py  base.py  booking.py  cinema.py  db.py  hall.py  inbox_event.py  movie.py  outbox_event.py  seat.py  seat_availability.py  seat_type.py  session.py  session_price.py  session_seat_type_price.py  ticket.py
app/core/: __init__.py  config.py  fs_router.py
app/dependencies/: __init__.py  faststream.py  infrastructure.py  repositories.py  services.py
app/event_handlers/: __init__.py  base.py  booking.py  hall.py  movie.py
app/events/: __init__.py  event_list.py  event_session.py  eventer.py  hall.py  seat.py  session.py  session_price.py  topics.py  types.py
app/exceptions/: __init__.py  db.py  db_handlers.py
app/integrity_handler/: __init__.py  address.py  booking.py  cinema.py  hall.py  movie.py  seat.py  session.py  session_price.py
app/log/: __init__.py  log_types.py
app/repositories/: __init__.py  address.py  base.py  booking.py  cinema.py  hall.py  inbox_event.py  movie.py  seat.py  session.py  session_price.py  signals.py  unit_of_work.py
app/schemas/: address.py  base.py  booking.py  cinema.py  db.py  event.py  hall.py  inbox_event.py  movie.py  seat.py  session.py  session_price.py  ticket.py
app/services/: __init__.py  address.py  base.py  booking.py  cinema.py  hall.py  inbox_unit_of_work.py  movie.py  seat.py  session.py  session_price.py
debezium/conf/: application.properties
(+54 files in other folders)
