[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
mypy = "^1.19.1"
python-slugify = "==8.0.4"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

